Javadoc. Replaced deprecated from Java 21, tested compile with 8, 11, 17, 21